chore: update project and team name to Couch Potato

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "couchpotato_amuhacks5.0-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
